margin bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ hr {
 }
 /* Home Section */
 .intro {
-	margin-top: 70px;
+	margin-top: 90px;
 	margin-bottom: -2px;
 	background: url(../img/topbkg.png) no-repeat center center fixed; 
 	background-size: 100%;
